Total refactor around the handling and parsing of a json object